Set region color based on GeoJSON's properties
I've also imported d3.scale.quantize from D3's to make my life easier.

--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -12,6 +12,7 @@ main = base/main
 main =
     vendor/leaflet.js
     vendor/leaflet.css
+    vendor/d3.scale.quantize.js
     vendor/backend.ckan.js
 
     choroplethmap.js
