--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -12,6 +12,8 @@ main = base/main
 main =
     vendor/leaflet.js
     vendor/leaflet.css
+    vendor/leaflet.label.js
+    vendor/leaflet.label.css
     vendor/d3.scale.quantize.js
     vendor/backend.ckan.js
 
