--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -16,6 +16,7 @@ main =
     vendor/leaflet.label.css
     vendor/d3.scale.quantize.js
     vendor/backend.ckan.js
+    vendor/queryStringToJSON.js
 
     choroplethmap.js
     choroplethmap.css
