[#10] Make the filter fields configurable by the user
Each field means that, when clicking on a region in the map, we'll get that
region's fields, as defined in the filter fields, and set up the filter with
the resourceKeyField.

For example, if you're plotting cities in the map (it's your resourceKeyField),
and set the filter fields to be country, state, and city, and click on New York
City, we would set the filters to be:

* city = USA
* city = New York
* city = New York City

--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -17,6 +17,7 @@ main =
     vendor/d3.scale.quantize.js
     vendor/backend.ckan.js
     vendor/queryStringToJSON.js
+    vendor/basiccharts_filters_form.js
 
     choroplethmap.js
     choroplethmap.css
