[#13] ChoroplethMap's JS reuses NavigableMap's
There's still too much code duplication, but we're starting to get there.

--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -19,5 +19,10 @@ main =
     vendor/queryStringToJSON.js
     vendor/basiccharts_filters_form.js
 
+navigablemap =
+    navigablemap.js
+    navigablemap.css
+
+choroplethmap =
     choroplethmap.js
     choroplethmap.css
