[#13] Extract map's ckan module creation to a separate file
First of all, the visualizations shouldn't know about CKAN. I also removed
quite a bit of code duplication doing this. I had to add some magic to do this
(by using the same initializer, just changing the type of map to be called),
but I think it's better than it was before.

--- a/ckanext/choroplethmap/theme/public/resource.config
+++ b/ckanext/choroplethmap/theme/public/resource.config
@@ -18,6 +18,7 @@ main =
     vendor/backend.ckan.js
     vendor/queryStringToJSON.js
     vendor/basiccharts_filters_form.js
+    ckan_map_modules.js
 
 navigablemap =
     navigablemap.js
